fix styling on smaller screens

--- a/public/css/documentation.css
+++ b/public/css/documentation.css
@@ -1,7 +1,9 @@
-.documentation-nav {
-  position: fixed;
-}
-
 .documentation-body h2 {
   padding-top: 2em;
+}
+
+@media (min-width: 992px) {
+  .documentation-nav {
+    position: fixed;
+  }
 }
